fix: Adjust column widths and add padding for better alignment in file list

--- a/css/vxui/vxui.css
+++ b/css/vxui/vxui.css
@@ -236,10 +236,11 @@ body.vx-active #tmpui_body {
 .vx-list-col-date {
     width: 150px;
     text-align: right;
+    padding-right: 16px;
 }
 
 .vx-list-col-actions {
-    width: 120px;
+    width: 140px;
     text-align: right;
 }
 
@@ -364,10 +365,11 @@ body.vx-active #tmpui_body {
 .vx-list-date {
     width: 150px;
     text-align: right;
+    padding-right: 16px;
 }
 
 .vx-list-actions {
-    width: 120px;
+    width: 140px;
     display: flex;
     justify-content: flex-end;
     gap: 4px;
